fix word wrap

--- a/public/styles/ui/chat.css
+++ b/public/styles/ui/chat.css
@@ -42,7 +42,7 @@
 }
 
 .chat-container p {
-	word-break: break-all;
+	word-wrap: break-word;
 }
 
 /* BUTTONS */
